# torchd

./: CMakeLists.txt  LICENSE  README.md
src/: torchd.cpp
test/: conftest.py  test_tensors.py
